[metadata]
name = pnu-ngc
description = n-grams count
long_description = file: README.md
long_description_content_type = text/markdown
version = 1.0.2
license = BSD 3-Clause License
license_files = License
author = Hubert Tournier
author_email = nobody@nowhere.invalid
url = https://github.com/HubTou/ngc/
project_urls =
    Bug Tracker = https://github.com/HubTou/ngc/issues
keywords = pnu-project
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.0
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Security :: Cryptography
    Topic :: System
    Topic :: Text Processing
    Topic :: Text Processing :: Filters
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0
install_requires =
    pnu-unicode2ascii

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ngc = ngc:main

[options.data_files]
man/man1 = 
    man/ngc.1.gz

